--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,6 @@ html, body {
   font-family: sans-serif;
 }
 
-/*
-
 .my_social {
   position: absolute;
   top: 25px;
@@ -13,7 +11,7 @@ html, body {
   z-index: 10;
 }
 
-.my_social a {
+/*.my_social a {
   display: inline-block;
   height: 2.5em;
 }
