--- a/css/styles.css
+++ b/css/styles.css
@@ -16,11 +16,11 @@ html, body {
   height: 2.5em;
 }
 
-/*.my_social a img {
+.my_social a img {
   height: 1.5em;
 }
 
-.slideshow {
+/*.slideshow {
   width: 100%;
   height: 100%;
   border: 0px;
