--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ html, body {
   height: 1.5em;
 }
 
-/*.slideshow {
+.slideshow {
   width: 100%;
   height: 100%;
   border: 0px;
@@ -30,7 +30,7 @@ html, body {
   overflow: hidden;
 }
 
-input {
+/*input {
   display: none;
 }
 input:checked + .slide {
