--- a/css/styles.css
+++ b/css/styles.css
@@ -30,10 +30,11 @@ html, body {
   overflow: hidden;
 }
 
-/*input {
+input {
   display: none;
 }
-input:checked + .slide {
+
+/*input:checked + .slide {
   transform: translateX(0px);
   transition: transform 0.5s ease-in-out;
 }
