--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ input:checked+.slide .slide__content {
   background-position: center;
 }
 
-/*.slide:nth-child(3):after {
+.slide:nth-child(3):after {
   position: absolute;
   margin: auto;
   top: 0px;
@@ -85,7 +85,8 @@ input:checked+.slide .slide__content {
   width: 100%;
   height: 100px;
 }
-.slide:nth-child(6) {
+
+/*.slide:nth-child(6) {
   background: url("https://placehold.it/2000x2500/540032/fff?text=2");
   background-repeat: no-repeat;
   background-size: 100%;
