--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ input:checked+.slide .slide__content {
   background-position: center;
 }
 
-/*.slide:nth-child(6):after {
+.slide:nth-child(6):after {
   position: absolute;
   margin: auto;
   top: 0px;
@@ -103,7 +103,8 @@ input:checked+.slide .slide__content {
   width: 100%;
   height: 100px;
 }
-.slide:nth-child(9) {
+
+/*.slide:nth-child(9) {
   background: url("https://placehold.it/2000x2500/820333/fff?text=3");
   background-repeat: no-repeat;
   background-size: 100%;
