--- a/css/styles.css
+++ b/css/styles.css
@@ -104,13 +104,14 @@ input:checked+.slide .slide__content {
   height: 100px;
 }
 
-/*.slide:nth-child(9) {
+.slide:nth-child(9) {
   background: url("https://placehold.it/2000x2500/820333/fff?text=3");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
 }
-.slide:nth-child(9):after {
+
+/*.slide:nth-child(9):after {
   position: absolute;
   margin: auto;
   top: 0px;
