--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ input:checked+.slide .slide__content {
   background-position: center;
 }
 
-/*.slide:nth-child(9):after {
+.slide:nth-child(9):after {
   position: absolute;
   margin: auto;
   top: 0px;
@@ -121,7 +121,8 @@ input:checked+.slide .slide__content {
   width: 100%;
   height: 100px;
 }
-.slide:nth-child(12) {
+
+/*.slide:nth-child(12) {
   background: url("https://placehold.it/2000x2500/C9283E/fff?text=4");
   background-repeat: no-repeat;
   background-size: 100%;
