--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ input:checked+.slide .slide__content {
   background-position: center;
 }
 
-/*.slide:nth-child(12):after {
+.slide:nth-child(12):after {
   position: absolute;
   margin: auto;
   top: 0px;
@@ -139,7 +139,8 @@ input:checked+.slide .slide__content {
   width: 100%;
   height: 100px;
 }
-.slide:nth-child(15) {
+
+/*.slide:nth-child(15) {
   background: url("https://placehold.it/2000x2500/F0433A/fff?text=5");
   background-repeat: no-repeat;
   background-size: 100%;
