--- a/css/styles.css
+++ b/css/styles.css
@@ -140,13 +140,14 @@ input:checked+.slide .slide__content {
   height: 100px;
 }
 
-/*.slide:nth-child(15) {
+.slide:nth-child(15) {
   background: url("https://placehold.it/2000x2500/F0433A/fff?text=5");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
 }
-.slide:nth-child(15):after {
+
+/*.slide:nth-child(15):after {
   position: absolute;
   margin: auto;
   top: 0px;
