--- a/css/styles.css
+++ b/css/styles.css
@@ -219,12 +219,12 @@ label:nth-child(13) {
   }
 }
 
-/*.containers {
+.containers {
   width: 520px;
   margin: 20px auto;
 }
 
-#contact h1 {
+/*#contact h1 {
   font-family: helvetica;
   font-weight: normal;
   text-align: center;
