--- a/css/styles.css
+++ b/css/styles.css
@@ -251,13 +251,13 @@ label:nth-child(13) {
   transition: all 0.4s linear;
 }
 
-/*.cal caption {
+.cal caption {
   background: #d44;
   color: #eee;
   font-size: 15px;
 }
 
-.cal th {
+/*.cal th {
   color: #aaa;
   line-height: 200%;
 }
