--- a/css/styles.css
+++ b/css/styles.css
@@ -257,12 +257,12 @@ label:nth-child(13) {
   font-size: 15px;
 }
 
-/*.cal th {
+.cal th {
   color: #aaa;
   line-height: 200%;
 }
 
-.cal th:first-child {
+/*.cal th:first-child {
   color: #f00;
 }
 
