--- a/css/styles.css
+++ b/css/styles.css
@@ -262,11 +262,11 @@ label:nth-child(13) {
   line-height: 200%;
 }
 
-/*.cal th:first-child {
+.cal th:first-child {
   color: #f00;
 }
 
-.cal th:last-child {
+/*.cal th:last-child {
   color: #04d;
 }
 
